# Reachy_Mini_For_Home_Assistant

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_EN.md  CHANGELOG.md  CLAUDE.md  Dockerfile  ENTITIES.md  PROJECT_PLAN.md  PROJECT_PLAN_EN.md  Project_Summary.md  QUICKSTART.md  QUICKSTART_CN.md  README.md  README_ASSETS.md  README_CN.md  README_HF_SPACES.md  REQUIREMENTS.md  REQUIREMENTS_EN.md  app.py  app.yaml  changelog.json  commit.txt  commit_msg.txt  commitmsg.txt  download_models.ps1  download_models.sh  hey_reachy.tflite  index.html  install.ps1  install.sh  main.py  pyproject.toml  reachy_mini_emotion_blueprint.yaml  requirements.txt  setup.ps1  setup.py  setup.sh  (+5 more)
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: auto_release_on_version.yml  build-ha-card.yml  sync_develop_to_hf_edge.yml  sync_to_hf.yml
.serena/: project.yml
docs/: USER_MANUAL_CN.md  USER_MANUAL_EN.md
ha/: CHANGELOG.md  LICENSE  README.md  SPLIT_REPOSITORY.md  build.sh  example-dashboard.yaml  hacs.json  package.json  reachy-3d-card.html  reachy-3d-status-card.html  reachy-mini-3d-card.js  rollup.config.js
ha/.github/: PULL_REQUEST_TEMPLATE.md
ha/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ha/.github/workflows/: build-release.yml
ha/assets/: reachy-mini.urdf
ha/src/: reachy-mini-3d-card.js
home_assistant_blueprints/: reachy_mini_presence_companion.yaml
local/: .device_id
profiles/default/: instructions.txt  tools.txt
reachy_mini_ha_voice/: __init__.py  __main__.py  animation_player.py  api_server.py  app.py  audio_analyzer.py  audio_player.py  camera_server.py  emotion_moves.py  entity.py  entity_extensions.py  entity_registry.py  gesture_detector.py  head_tracker.py  main.py  models.py  motion.py  movement_manager.py  reachy_controller.py  reachy_integration.py  robot_state_monitor.py  satellite.py  speech_sway.py  system_diagnostics.py  tap_detector.py  util.py  voice_assistant.py  zeroconf.py
reachy_mini_ha_voice/animations/: conversation_animations.json  emotion_keywords.json  event_mappings.json  gesture_mappings.json
reachy_mini_ha_voice/audio/: __init__.py  audio_player.py  doa_tracker.py  microphone.py
reachy_mini_ha_voice/core/: __init__.py  config.py  daemon_monitor.py  exceptions.py  health_monitor.py  memory_monitor.py  robot_state_monitor.py  service_base.py  sleep_manager.py  system_diagnostics.py  util.py
reachy_mini_ha_voice/entities/: __init__.py  emotion_detector.py  entity.py  entity_extensions.py  entity_factory.py  entity_keys.py  entity_registry.py  event_emotion_mapper.py
reachy_mini_ha_voice/models/: crops_classifier.onnx  hand_detector.onnx
reachy_mini_ha_voice/motion/: __init__.py  animation_player.py  antenna.py  emotion_moves.py  gesture_actions.py  movement_manager.py  pose_composer.py  reachy_motion.py  smoothing.py  speech_sway.py  state_machine.py
reachy_mini_ha_voice/protocol/: __init__.py  api_server.py  satellite.py  zeroconf.py
reachy_mini_ha_voice/sounds/: .gitkeep  README.md
reachy_mini_ha_voice/vision/: __init__.py  camera_server.py  face_tracking_interpolator.py  frame_processor.py  gesture_detector.py  gesture_smoother.py  head_tracker.py
reachy_mini_ha_voice/wakewords/: .gitkeep  README.md  hey_reachy.json  hey_reachy.tflite  okay_computer.tflite
reachy_mini_ha_voice/wakewords/openWakeWord/: hey_reachy.json  hey_reachy.tflite  hey_ree_che.json
reachy_mini_home_assistant/: __init__.py  __main__.py  main.py  models.py  reachy_controller.py  voice_assistant.py
reachy_mini_home_assistant/animations/: animation_config.py  conversation_animations.json  gesture_mappings.json
reachy_mini_home_assistant/audio/: __init__.py  audio_player.py  audio_player_local.py  audio_player_playback.py  audio_player_sendspin.py  audio_player_shared.py  audio_player_stream_decoded.py  audio_player_stream_pcm.py  audio_player_wobble.py  doa_tracker.py  local_audio_player.py
reachy_mini_home_assistant/core/: __init__.py  config.py  daemon_monitor.py  robot_state_monitor.py  service_base.py  sleep_manager.py  util.py
reachy_mini_home_assistant/entities/: emotion_detector.py  entity.py  entity_extensions.py  entity_factory.py  entity_keys.py  entity_registry.py  event_emotion_mapper.py  runtime_entity_setup.py  sensor_entity_setup.py
reachy_mini_home_assistant/models/: model.pt
reachy_mini_home_assistant/motion/: __init__.py  animation_player.py  antenna.py  command_runtime.py  control_runtime.py  emotion_moves.py  gesture_actions.py  idle_runtime.py  movement_manager.py  pose_composer.py  reachy_motion.py  speech_sway.py  state_machine.py
reachy_mini_home_assistant/protocol/: api_server.py  entity_bridge.py  message_dispatch.py  motion_bridge.py  satellite.py  session_flow.py  voice_pipeline.py  wakeword_assets.py  zeroconf.py
reachy_mini_home_assistant/sounds/: .gitkeep  wake_word_triggered.flac
reachy_mini_home_assistant/vision/: camera_http.py  camera_processing.py  camera_runtime.py  camera_server.py  frame_processor.py  gesture_detector.py  gesture_smoother.py
reachy_mini_home_assistant/wakewords/: README.md  alexa.tflite  hey__monster.json  hey__monster.tflite  hey_luna.tflite  hey_mycroft.tflite  okay_nabu.tflite  stop.tflite
script/: download_assets.py
scripts/: verify.py
sounds/: README.md
src/hello_world/: __init__.py  app.py
src/reachy_mini_ha_voice/: __init__.py  __main__.py  api_server.py  app.py  audio_player.py  main.py  models.py  motion.py  satellite.py  state.py  util.py  voice_assistant.py
src/reachy_mini_ha_voice/audio/: __init__.py  adapter.py  processor.py
src/reachy_mini_ha_voice/config/: __init__.py  manager.py
src/reachy_mini_ha_voice/voice/: stt.py  (+3 more)
src_backup/reachy_mini_ha_voice/: __init__.py  __main__.py  app.py  models.py
tests/: test_animation_config.py  test_camera_gesture_processing.py  test_command_runtime.py  test_emotion_detector.py
wakewords/: README.md  hey_jarvis.json  hey_reachy.json.example  okay_nabu.json.example  stop.json
wakewords/openWakeWord/: ok_nabu_v0.1.tflite
(+13 files in other folders)
