[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_ha_voice"
version = "0.5.2"
description = "Home Assistant Voice Assistant for Reachy Mini"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    # Reachy Mini SDK (provides audio via media system)
    "reachy-mini",

    # Audio processing (fallback when not on Reachy Mini)
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "numpy>=2.0.0",

    # Camera streaming
    "opencv-python>=4.10.0",

    # Wake word detection (local)
    # STT/TTS is handled by Home Assistant, not locally
    "pymicro-wakeword>=2.0.0,<3.0.0",
    "pyopen-wakeword>=1.0.0,<2.0.0",

    # ESPHome protocol (communication with Home Assistant)
    "aioesphomeapi>=43.10.1",
    "zeroconf>=0.140.0",

    # Motion control (head movements)
    "scipy>=1.14.0",
    
    # Face tracking (YOLO-based head detection)
    "ultralytics>=8.3.0",
    "supervision>=0.25.0",
    "huggingface_hub>=0.27.0",
    
    # Sendspin synchronized audio (optional, for multi-room playback)
    "aiosendspin>=2.0.1",
]
keywords = ["reachy-mini-app", "reachy-mini", "home-assistant", "voice-assistant"]

[project.entry-points."reachy_mini_apps"]
reachy_mini_ha_voice = "reachy_mini_ha_voice.main:ReachyMiniHaVoice"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.flac", "*.md", "*.tflite"]
