[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_home_assistant"
version = "0.9.9"
description = "Deep integration of Reachy Mini robot with Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    # Reachy Mini SDK with gstreamer support (for camera streaming)
    "reachy-mini[gstreamer]>=1.3.0",
    "reachy-mini-motor-controller>=1.5.5",

    # Audio processing (for audio file analysis)
    "soundfile>=0.13.0",
    "numpy>=2.0.0,<=2.2.5",

    # Camera streaming
    "opencv-python>=4.12.0.88",

    # Wake word detection (local)
    # STT/TTS is handled by Home Assistant, not locally
    "pymicro-wakeword>=2.0.0,<3.0.0",
    "pyopen-wakeword>=1.0.0,<2.0.0",

    # ESPHome protocol (communication with Home Assistant)
    "aioesphomeapi>=43.10.1",
    "zeroconf<1",

    # Motion control (head movements)
    "scipy>=1.14.0",

    # Face tracking (YOLO-based head detection)
    "ultralytics",
    "supervision",

    # Sendspin synchronized audio (optional, for multi-room playback)
    "aiosendspin>=2.0.1",

    # Gesture detection (ONNX runtime for HaGRID models)
    "onnxruntime>=1.18.0",

    # PyTorch (for vision models)
    "torch==2.5.1",
    "torchvision==0.20.1",

    # Compatibility with system packages (gradio, etc.)
    "pillow<12.0",
    "pydantic<=2.12.3",
]
keywords = ["reachy-mini-app", "reachy-mini", "home-assistant", "voice-assistant"]

[project.entry-points."reachy_mini_apps"]
reachy_mini_home_assistant = "reachy_mini_home_assistant.main:ReachyMiniHaVoice"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.json", "*.flac", "*.md", "*.tflite", "*.onnx", "*.pt"]

# ============================================================================
# Ruff - Fast Python linter and formatter
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["reachy_mini_home_assistant"]

# Exclude reference code and generated files
exclude = [
    "reference/",
    "__pycache__",
    ".git",
    "*.egg-info",
]

[dependency-groups]
dev = [
    "ruff==0.12.0",
    "mypy==1.18.2",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modern Python syntax)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking (TYPE_CHECKING optimization)
    "RUF",    # Ruff-specific rules
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "PLR0913",  # too many arguments (common in robot control)
    "PLR2004",  # magic value comparison (many thresholds in motion code)
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "PLR0911",  # too many return statements
    "SIM108",   # use ternary operator (sometimes less readable)
    "B008",     # function call in default argument (used for field factories)
    # The following are intentional patterns in this codebase:
    "PLC0415",  # import-outside-top-level (lazy imports for optional deps)
    "PLW0603",  # global-statement (used for singletons)
    "SIM102",   # collapsible-if (sometimes more readable expanded)
    "SIM105",   # suppressible-exception (explicit try/except is clearer)
    "PTH123",   # builtin-open (pathlib not always better)
    "PTH108",   # os-unlink (pathlib not always better)
    "RUF013",   # implicit-optional (legacy code)
    "TC002",    # third-party import (numpy is required at runtime)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ are intentional

[tool.ruff.lint.isort]
known-first-party = ["reachy_mini_home_assistant"]

# ============================================================================
# Mypy - Static type checker
# ============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = false  # Too noisy for mixed typed/untyped codebase
warn_unused_ignores = true
disallow_untyped_defs = false  # Start lenient, can tighten later
check_untyped_defs = false  # Too strict for initial setup
ignore_missing_imports = true  # Many robot SDK libs lack type stubs
no_implicit_optional = false  # Allow implicit Optional for now
# Disable some checks that are too strict for this codebase
disable_error_code = [
    "union-attr",  # Too many Optional accesses without None checks
    "no-redef",    # Class redefinitions for SDK compatibility
    "attr-defined",  # Some dynamic attributes from SDK
    "assignment",  # Variable type changes (common in Python)
    "arg-type",    # Argument type mismatches (often SDK issues)
    "unused-ignore",  # Type ignore comments from before config
    "return-value",  # Return type mismatches (often fine)
    "no-untyped-def",  # Missing type annotations (too strict initially)
    "valid-type",  # Type validity (some edge cases)
    "has-type",    # Cannot determine type
    "call-arg",    # Too few/many arguments
    "import-untyped",  # Missing stubs for third-party libs
    "misc",        # Miscellaneous errors
]
exclude = [
    "reference/",
    "tests/",
]

# Stricter checking for core modules (can enable gradually)
[[tool.mypy.overrides]]
module = [
    "reachy_mini_home_assistant.core.*",
    "reachy_mini_home_assistant.motion.smoothing",
    "reachy_mini_home_assistant.motion.pose_composer",
]
disallow_untyped_defs = true
warn_unreachable = true
